# TapRoot

./: .gitignore  CMakeLists.txt  main.c
Test/: main.c
taproot/: taproot.c  taproot.h
